[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradio-tester"
version = "0.1.0"
description = "Framework for Claude Code to test, visualize, and verify Gradio web applications"
requires-python = ">=3.10"
dependencies = [
    "gradio_client>=1.0.0",
]

[project.optional-dependencies]
screenshot = ["playwright>=1.40.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.24.0",
]

[project.scripts]
gradio-tester = "gradio_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
