[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradio-tester"
version = "0.1.0"
description = "Framework for Claude Code to test, visualize, and verify Gradio web applications"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ivan Coronado"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gradio_client>=1.0.0",
]

[project.optional-dependencies]
screenshot = ["playwright>=1.40.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.24.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/icoronado1/Gradio-ClaudeCode-Tester"
Repository = "https://github.com/icoronado1/Gradio-ClaudeCode-Tester"

[project.scripts]
gradio-tester = "gradio_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
